--- a/templates/default/delete_records.html
+++ b/templates/default/delete_records.html
@@ -43,7 +43,7 @@
                 {% for record in records %}
                 <tr>
                     <td>{{ record['name'] }}</td>
-                    <td><span class="badge bg-light text-dark">{{ record['type'] }}</span></td>
+                    <td><span class="badge {% if record['type'] == 'A' %}bg-primary{% elseif record['type'] == 'AAAA' %}bg-info{% elseif record['type'] == 'CNAME' %}bg-success{% elseif record['type'] == 'MX' %}bg-warning{% elseif record['type'] == 'TXT' %}bg-secondary{% elseif record['type'] == 'PTR' %}bg-danger{% elseif record['type'] == 'SOA' %}bg-dark{% elseif record['type'] == 'NS' %}bg-info{% else %}bg-secondary{% endif %}">{{ record['type'] }}</span></td>
                     <td>{{ record['prio'] }}</td>
                     <td><code class="text-break">{{ record['content'] }}</code></td>
                     <td>{{ record['ttl'] }}</td>
