--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -449,9 +449,9 @@
             <td class="{{ iface_record_comments ? 'col-sm-1' : 'col-sm-2' }} text-end">
                 <div class="gap-2">
                     <a class="btn btn-outline-primary btn-sm" href="index.php?page=edit_record&id={{ r['id'] }}&domain={{ zone_id }}">
-                        <i class="bi bi-pencil-square text-primary"></i> {% if not iface_record_comments %}{% trans %}Edit{% endtrans %}{% endif %}</a>
+                        <i class="bi bi-pencil-square text-primary"></i></a>
                     <a class="btn btn-outline-danger btn-sm" href="index.php?page=delete_record&id={{ r['id'] }}&domain={{ zone_id }}">
-                        <i class="bi bi-trash text-danger"></i> {% if not iface_record_comments %}{% trans %}Delete{% endtrans %}{% endif %}</a>
+                        <i class="bi bi-trash text-danger"></i></a>
                 </div>
             </td>
             {% endif %}
