--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -394,4 +394,21 @@
         </div>
     </div>
     {% endif %}
+    {% if permissions['user_is_ueberuser'] and enable_consistency_checks %}
+    <div class="col mb-1 card-item">
+        <div class="card h-100 shadow-sm">
+            <div class="card-header text-center bg-transparent border-0 pt-2">
+                <i class="bi bi-database-check display-4"></i>
+            </div>
+            <div class="card-body d-flex flex-column justify-content-between">
+                <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Database Consistency{% endtrans %}</h6>
+                <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Check database integrity{% endtrans %}</p>
+                <a href="index.php?page=database_consistency" class="btn btn-light btn-sm mt-2" data-testid="database-consistency-link">
+                    <span class="d-none d-lg-inline">{% trans %}Check Database{% endtrans %}</span>
+                    <span class="d-lg-none">{% trans %}Check DB{% endtrans %}</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 </div>
